What's new in PyObjC
====================

An overview of the relevant changes in new, and older, releases.

Version 3.0.1
-------------

* Issue #86: Fix installation issue with setuptools 3.6.

* Issue #85: Remove debug output from the wrapper for ``NSApplicationMain``.

* Issue #82: NSArray.__iter__ was accedently removed in PyObjC 3.0

Version 3.0
-----------

* Issue #50: Accessing Objective-C methods on "magic cookie" variables,
  like ``LaunchServices.kLSSharedFileListItemLast`` would crash the interpreter.

  This affected code like::

      from LaunchServices import kLSSharedFileListItemLast

      kLSSharedFileListItemLast == kLSSharedFileListItemLast
      dir(kLSSharedFileListItemLast)
      kLSSharedFileListItemLast.compare_

* Added a decorator "python_method" than can be used to decorate methods that should
  not be registered with the Objective-C runtime and should not be converted to a
  Objective-C selector.

  Usage::

      class MyClass (NSObject):

          @python_method
	  @classmethod
	  def fromkeys(self, keys):
	      pass

  This makes it easier to add a more "pythonic" API to Objective-C subclasses without
  being hindered by PyObjC's conventions for naming methods.

* Issue #64: Fix metadata for ``Quartz.CGEventKeyboardSetUnicodeString``
  and ``Quartz.CGEventKeyboardGetUnicodeString``.

* Issue #77: Passing a bound selector as a block argument failed when the block
  was actually called because the trampoline that calls back to Python accidently
  ignored the bound ``self`` argument.

* Issue #76: It is now possible to pass ``None`` to a method expecting a block
  argument, as with normal object arguments the Objective-C method receives
  a ``nil`` value.

* Python integer values with values between 2 ** 63 and 2**64 are now proxied
  as plain NSNumber objects, not as using PyObjC specific subclass of NSNumber,
  to avoid a problem with writing them to binary plist files.
